# cvforge

./: .env.example  .gitignore  cvforge.yaml  pyproject.toml
.docs/: PRD.md
.opencode/agents/: backend-engineer.md  code-reviewer.md  frontend-engineer.md  infra-engineer.md  orchestrator.md  qa-engineer.md
cvforge/: __init__.py
cvforge/cli/: __init__.py
cvforge/core/: __init__.py  exceptions.py  jd_parser.py  models.py  normalizer.py  yaml_loader.py
cvforge/core/llm/: __init__.py
cvforge/web/: __init__.py
cvforge/web/api/: __init__.py
data/: master_cv.yaml  synonyms.yaml
tests/: __init__.py  conftest.py
tests/core/: __init__.py  test_jd_parser.py  test_normalizer.py  test_yaml_loader.py
tests/fixtures/: invalid_extra_field.yaml  invalid_missing_personal.yaml  invalid_synonyms_non_list.yaml  invalid_yaml_syntax.yaml  valid_config.yaml  valid_minimal_cv.yaml  valid_synonyms.yaml
